[package]
name = "every-range"
version = "0.1.0"
authors = ["Christian Vallentin"]
edition = "2018"
description = "Iterator for interleaving included and excluded ranges"
keywords = ["range", "ranges", "replace", "transform"]
categories = ["algorithms", "text-processing"]
license = "MIT"
repository = "https://github.com/vallentin/every-range"
documentation = "https://docs.rs/every-range"
readme = "README.md"
exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "vallentin/every-range" }

[dependencies]
